# azure-storage-cpplite

./: .gitignore  BUILD  BreakingChanges.txt  CMakeLists.txt  CMakeSettings.json  Changelog.txt  NOTICE.txt  NOTICES.txt  README.md  WORKSPACE  azure-pipelines.yml  cgmanifest.json
.github/workflows/: build.yml  c-cpp.yml
adls/: CMakeLists.txt
adls/include/: adls_client.h  json.hpp
adls/src/: adls_client.cpp  append_data_request.cpp  create_directory_request.cpp  create_file_request.cpp  delete_directory_request.cpp  flush_data_request.cpp  get_access_control_request.cpp  list_paths_request.cpp  rename_file_request.cpp  set_access_control_request.cpp
adls/test/: directory_test.cpp
azure/: cmake-build.yml
bazel/: BUILD  README.md  deps.bzl
cmake/: FindUUID.cmake
include/: common.h  compare.h  constants.h  create_container_request_base.h  executor.h  get_blob_property_request_base.h  get_blob_request_base.h  get_container_property_request_base.h  hash.h  http_base.h  list_containers_request_base.h  logging.h  put_blob_request_base.h  put_block_list_request_base.h  retry.h  storage_EXPORTS.h  storage_account.h  storage_credential.h  storage_outcome.h  storage_request_base.h  tinyxml2_parser.h  utility.h  xml_parser_base.h
include/blob/: blob_client.h
include/http/: libcurl_http_client.h
include/todo/: get_blob_metadata_request.h
sample/: BUILD  CMakeLists.txt  sample.cpp
src/: append_block_request_base.cpp  base64.cpp  constants.cpp  copy_blob_request_base.cpp  create_container_request_base.cpp  delete_blob_request_base.cpp  delete_container_request_base.cpp  get_blob_property_request_base.cpp  get_blob_request_base.cpp  get_block_list_request_base.cpp  get_container_property_request_base.cpp  get_page_ranges_request_base.cpp  hash.cpp  list_blobs_request_base.cpp  list_containers_request_base.cpp  logging.cpp  put_blob_request_base.cpp  put_block_list_request_base.cpp  put_block_request_base.cpp  put_page_request_base.cpp  set_blob_metadata_request_base.cpp  set_container_metadata_request_base.cpp  storage_account.cpp  storage_credential.cpp  storage_url.cpp  tinyxml2_parser.cpp  utility.cpp
src/blob/: blob_client.cpp  blob_client_wrapper.cpp
src/http/: libcurl_http_client.cpp
test/: CMakeLists.txt  test_base.cpp  test_base.h
test/integration/: append_blob_integration_test.cpp  blob_client_integration_test.cpp  blob_container_integration_test.cpp  blob_general_integration_test.cpp  blob_integration_base.cpp  blob_integration_base.h  block_blob_integration_test.cpp  page_blob_integration_test.cpp
